--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.username=root
 spring.datasource.password=qband210
-spring.datasource.url=jdbc:mysql://localhost:3306/hello
+spring.datasource.url=jdbc:mysql://localhost:3306/hi
 spring.jpa.hibernate.ddl-auto=update
